--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,13 @@ repositories {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.slf4j:slf4j-nop:1.7.32'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.msgpack:msgpack-core:0.9.0'
     implementation 'org.java-websocket:Java-WebSocket:1.5.2'
+    implementation 'org.slf4j:slf4j-nop:1.7.32'
 }
 
 application {
