--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -15,6 +15,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    extraLibs
+}
+
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
@@ -27,6 +31,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:1.7.32'
 }
 
+
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
@@ -36,16 +41,21 @@ java {
     //withJavadocJar()
 }
 
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
 
-tasks.named('jar') {
+tasks.named('jar') {    
     manifest {
+        attributes "Main-Class": "jighthouse.Jighthouse"
         attributes('Implementation-Title': project.name,
                    'Implementation-Version': project.version)
     }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
-version = '0.1.0'
+version = '0.1.1'
